@@ -3,7 +3,7 @@
     "setconfig01" : "# Selecciona la versión del juego deseada (por ejemplo, 100.0.0, 1.18, 1.18.1). Predeterminado: 100.0.0 (para tener todas las versiones)",
     "datapath" : "\"Carpeta Mods\" no encontrada. Por favor, ingresa la ruta correcta: ",
     "title" : "Actualizador de Mods para Vintage Story",
-    "title2" : "No actualices mods para una versión del juego superior a",
+    "title2" : "Limite las actualizaciones de mods a la versión del juego :",
     "version_max" : "Última versión",
     "author" : "por Laerinok",
     "first_launch" : "Primera ejecución del programa, creación del archivo config.ini completada.",
