@@ -3,7 +3,7 @@
 	"setconfig01" : "# Выберите желаемую версию игры (например: 100.0.0, 1.18, 1.18.1). По умолчанию: 100.0.0 (чтобы были все версии)",
 	"datapath" : "Папка \"Mods\" не найдена. Пожалуйста, укажите правильный путь: ",
 	"title" : "Обновление мода Vintage Story.",
-	"title2" : "Не обновляйте моды для версии игры выше",
+	"title2" : "Ограничить обновления модов версией игры :",
 	"version_max" : "Максимальная версия игры:",
 	"author" : "от Laerinok",
 	"first_launch" : "Первое выполнение программы, создание файла config.ini завершено.",
